# mem-barrier

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: build.rs
src/: lib.rs
src/arch/: aarch64.rs  mod.rs  riscv.rs  x86.rs
